# DeepGLM

./: .env.example  .env.test  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
agents/: __init__.py  main_agent.py
agents/subagents/: __init__.py  android_operator.py
config/: __init__.py  settings.py
deepglm/: __init__.py  exceptions.py
deepglm/agents/: __init__.py  main_agent.py
deepglm/agents/subagents/: __init__.py  android_operator.py
deepglm/config/: __init__.py  prompts.py  settings.py
deepglm/middleware/: __init__.py
deepglm/tools/: __init__.py  internet.py  vision.py
dev/bugfix/: 0001-llm-import-summary.md  0001-llm-import.md
dev/plan/: 0000-start-summary.md  0000-start.md  0002-code-structure-summary.md  0002-code-structure.md
dev/refs/: deepagents.md  langchain-llms.txt
middleware/: __init__.py
tests/: conftest.py  test_config.py  test_imports.py
tools/: __init__.py  adb.py  internet.py  vision.py
