[project]
name = "deepglm"
version = "0.1.0"
description = "DeepGLM Research Agent - A streamlined research and knowledge work assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.4",
    "tavily-python>=0.7.17",
    "python-dotenv>=1.0.0",
    "langchain-openai>=1.1.7",
]
